# SafePodCasting

./: README.md  safecast.cpp  safecast.h
test/: CMakeLists.txt  generate_coverage.sh  test_SafePodCasting.cpp
